--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ layout: default
                             <h4 class="experience-title"> {{ project.project_title }}</h4>
                             <h6 class="experience-info"> {{ project.project_info}}</h6>
                             <p class="experience-desc"> {{ project.project_description }} </p>
-                            <p><a href="{{exp.company_url}}">{{ project.project_url}}</a></p>
+                            <p><a class="project-link" href="{{exp.company_url}}">{{ project.project_url}}</a></p>
                         </div>
                     </div>
                     {% endif %}
