--- a/_includes/coding_activity.html
+++ b/_includes/coding_activity.html
@@ -1,11 +1,9 @@
 <!-- Wakatime ( Replace with your own wakatime embed config at https://wakatime.com )-->
 
-<!-- Pie Chart -->
-<figure>
-    <embed src="https://wakatime.com/share/@{{site.wakatime_username }}/f540df00-f2d1-46e2-a360-da7e13ed8a66.svg"></embed>
-</figure>
+<!-- Languages  -->
+<figure><embed src="https://wakatime.com/share/@sujaykundu777/e4c2a44e-390d-41f3-a4c8-b23b05fbec30.svg"></embed></figure>
 
 <!-- Hours Coded -->
 <figure>
-    <embed src="https://wakatime.com/share/@{{site.wakatime_username }}/1550a9f1-d41a-4745-92a0-181a6fbb2456.svg"></embed>
+    <embed src="https://wakatime.com/share/@sujaykundu777/5fcfa63e-9357-44d1-9a49-5244504a1f13.svg"></embed>
 </figure>
