--- a/_includes/head.html
+++ b/_includes/head.html
@@ -104,7 +104,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
     integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
-
+<script src="/assets/js/mode-switcher.js"></script>
   <script>
     (function (d, h, m) {
       var js, fjs = d.getElementsByTagName(h)[0];
