--- a/_includes/head.html
+++ b/_includes/head.html
@@ -96,6 +96,7 @@
   <script src="/assets/bower_components/lightgallery/dist/js/lightgallery-all.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.2/picturefill.min.js"></script>
   <script src="/assets/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
+   <script src="/assets/bower_components/nanobar/nanobar.min.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
 
@@ -104,7 +105,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
     integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
-<script src="/assets/js/mode-switcher.js"></script>
+
   <script>
     (function (d, h, m) {
       var js, fjs = d.getElementsByTagName(h)[0];
