--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,12 @@ layout: compress
 {%- include head.html -%}
 
 <body>
+
+
     <div class="container-fluid">
 
         {%- include header.html -%}
+
 
         <div class="col-lg-12">
             {{ content }}
@@ -22,9 +25,19 @@ layout: compress
         {%- include footer.html -%}
 
     </div>
-</body>
+     <script>
+            var options = {
+                classname: 'my-class',
+                id: 'my-id'
+            };
+            var nanobar = new Nanobar( options );
+            nanobar.go( 30 );
+            nanobar.go( 76 );
+            nanobar.go(100);
+        </script>
 
-<div hidden id="snipcart" data-api-key="Y2I1NTAyNWYtMTNkMy00ODg0LWE4NDItNTZhYzUxNzJkZTI5NjM3MDI4NTUzNzYyMjQ4NzU0"></div>
+    <div hidden id="snipcart" data-api-key="Y2I1NTAyNWYtMTNkMy00ODg0LWE4NDItNTZhYzUxNzJkZTI5NjM3MDI4NTUzNzYyMjQ4NzU0"></div>
 <script src="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.js" defer></script>
-
+   <script src="/assets/js/mode-switcher.js"></script>
+</body>
 </html>
