--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,77 +1,38 @@
 <header>
 
     <div class="col-lg-12">
+
         <div class="row">
-            <div id="author-img">
-                <a href="/">
-                    <img src="/assets/img/{{ site.author_logo }}" class="profile-img">
-                </a>
-            </div>
 
-            <div class="col-md-3" id="author_details">
-                <h1 class="profile-name"> {{ site.title }}</h1>
-                <p class="profile-bio"> {{ site.subtitle }}</p>
-                 <p class="profile-links">
-                    {% if site.twitter_username %}
-                    <a class="social-link" href="http://twitter.com/{{ site.twitter_username }}">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    {% endif %}
-                    {% if site.facebook_username %}
-                    <a class="social-link" href="http://facebook.com/{{ site.facebook_username }}">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    {% endif %}
-                    {% if site.instagram_username %}
-                    <a class="social-link" href="http://instagram.com/{{ site.instagram_username }}">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    {% endif %}
-                    {% if site.medium_username %}
-                    <a class="social-link" href="http://medium.com/@{{ site.medium_username }}">
-                        <i class="fab fa-medium-m"></i>
-                    </a>
-                    {% endif %}
-                    {% if site.github_username %}
-                    <a class="social-link" href="http://github.com/{{ site.github_username }}">
-                        <i class="fab fa-github"></i>
-                    </a>
-                    {% endif %}
-                    {% if site.behance_username %}
-                    <a class="social-link" href="http://behance.net/{{ site.behance_username }}">
-                        <i class="fab fa-behance"></i>
-                    </a>
-                    {% endif %}
-                    {% if site.linkedin_username %}
-                    <a class="social-link" href="http://linkedin.com/in/{{ site.linkedin_username }}">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    {% endif %}
-                    {% if site.telegram_username %}
-                    <a class="social-link" href="http://t.me/{{ site.telegram_username }}">
-                        <i class="fab fa-telegram-plane"></i>
-                    </a>
-                    {% endif %}
-                </p>
+                <nav class="navbar navbar-expand-lg fixed-top navbar-dark ">
+                <!-- <a class="navbar-brand" href="#">{{site.title}}</a> -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <a class="navbar-brand" href="/">{{site.title}}</a>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                          {% for i in site.urls %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ site.url}}{{site.baseurl}}{{ i.url }}">{{ i.text }}</a>
+                            </li>
+                            {% endfor %}
 
-            </div>
-            <div class="col-md-7" id="header-nav">
+                        </ul>
 
-                    <ul class="nav justify-content-end" id="navigation">
-                    {% for i in site.urls %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ site.url}}{{site.baseurl}}{{ i.url }}">{{ i.text }}</a>
-                    </li>
-                     {% endfor %}
-                     <li class="nav-item">
-                         <a class="nav-link" href="{{ site.url}}{{site.baseurl}}/search/"><i class="fa fa-search" aria-hidden="true"></i></a>
-                     </li>
-                    <li class="nav-item">
-                      <input class="nav-link switch" id="theme-toggle" onclick="modeSwitcher() "type="checkbox" name="checkbox" >
-                    </li>
-            </div>
+
+                    </div>
+                       <ul class="nav justify-content-end">
+                           <li class="nav-item">
+                                    <a class="nav-link" id="search-icon" href="{{ site.url}}{{site.baseurl}}/search/"><i class="fa fa-search" aria-hidden="true"></i></a>
+                                </li>
+                            <li class="nav-item">
+                                        <input class="nav-link switch" id="theme-toggle" onclick="modeSwitcher() "type="checkbox" name="checkbox" >
+                                </li>
+                             </ul>
+            </nav>
 
         </div>
-    </div>
 
+     </div>
 </header>
