--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -85,7 +85,59 @@ layout: default
         </div>
         <div class="col-lg-4">
 
-            <div class="card">
+            <div class="card" id="profile-card">
+                <a href="/">
+                    <img src="/assets/img/{{ site.author_logo }}" class="profile-img">
+                </a>
+                <h1 class="profile-name"> {{ site.title }}</h1>
+                 <p class="profile-bio"> {{ site.subtitle }}</p>
+                    {% if site.github_username %}
+                  {%- include github_follow_button.html -%}
+                {% endif %}
+
+                <p class="profile-links">
+                    {% if site.twitter_username %}
+                    <a class="social-link" href="http://twitter.com/{{ site.twitter_username }}">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.facebook_username %}
+                    <a class="social-link" href="http://facebook.com/{{ site.facebook_username }}">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.instagram_username %}
+                    <a class="social-link" href="http://instagram.com/{{ site.instagram_username }}">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.medium_username %}
+                    <a class="social-link" href="http://medium.com/@{{ site.medium_username }}">
+                        <i class="fab fa-medium-m"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.github_username %}
+                    <a class="social-link" href="http://github.com/{{ site.github_username }}">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.behance_username %}
+                    <a class="social-link" href="http://behance.net/{{ site.behance_username }}">
+                        <i class="fab fa-behance"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.linkedin_username %}
+                    <a class="social-link" href="http://linkedin.com/in/{{ site.linkedin_username }}">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.telegram_username %}
+                    <a class="social-link" href="http://t.me/{{ site.telegram_username }}">
+                        <i class="fab fa-telegram-plane"></i>
+                    </a>
+                    {% endif %}
+                </p>
+
                 {% if site.author_location %}
                 <h6>  <i class="fas fa-map-marker-alt"></i> {{ site.author_location }}</h6>
                 {% endif %}
@@ -98,13 +150,6 @@ layout: default
                 <h6> <i class="fas fa-link"></i> {{ site.author_website_url }} </h6>
                 {% endif %}
 
-                {% if site.github_username %}
-                  {%- include github_follow_button.html -%}
-                {% endif %}
-
-                {% if site.twitter_username %}
-                  {%- include twitter_follow_button.html -%}
-                {% endif %}
 
             </div>
 
