--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -103,6 +103,10 @@ html[data-theme="light"] {
 // *+* {
 //     margin-top: 1.5em;
 // }
+.my-class .bar {
+    background: #f69801;
+}
+
 
 body {
     background-color: var(--main-background-color) !important;
@@ -116,6 +120,7 @@ body {
     line-height: 1.35em;
     margin: 0;
     text-rendering: optimizeLegibility;
+    padding-top:33px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -143,8 +148,19 @@ header {
     background-color: var(--card-background-color) !important;
 }
 
+.navbar{
+       box-shadow: #000 0px 0px 8px;
+       background-color: #131313 !important;
+}
+.navbar-dark .navbar-brand {
+    color: #ff7601 !important;
+}
+#search-icon{
+    color: #FF7901;
+}
 
-header {
+#profile-card {
+    text-align: center;
     #author-img{
         text-align: center;
     }
@@ -253,6 +269,56 @@ footer {
 
  /*
     ##Device = Low Resolution Tablets, Mobiles (Landscape)
+    ##Screen = B/w 320px to 480px
+  */
+
+@media (min-width: 320px) and (max-width: 480px) {
+
+         header {
+              height: auto;
+              text-align: center;
+
+                 #author-img {
+                     margin-left: auto;
+                     margin-right: auto;
+                     width: 100%;
+                 }
+
+                 #author_details {
+                     text-align: center;
+                 }
+          }
+
+            #mc-embedded-subscribe-form {
+                width: 100%;
+                padding: 50px;
+            }
+
+            #mc_embed_signup_scroll_footer {
+                margin-left: 5%;
+                margin-right: 5%;
+                text-align: center;
+                font-size: 12px;
+            }
+
+            #mce-EMAIL_footer {
+                width: 200px;
+                padding: 14px;
+                color: #111;
+                border-color: #fff;
+                text-align: center;
+                text-transform: capitalize;
+                border: 1px solid #fff;
+            }
+
+            #mc-embedded-subscribe_footer {
+                margin-top: 30px;
+            }
+
+
+}
+ /*
+    ##Device = Low Resolution Tablets, Mobiles (Landscape)
     ##Screen = B/w 481px to 767px
   */
 
@@ -270,6 +336,31 @@ footer {
             }
         }
 
+          #mc-embedded-subscribe-form {
+              width: 100%;
+              padding: 50px;
+          }
+
+          #mc_embed_signup_scroll_footer {
+              margin-left: 5%;
+              margin-right: 5%;
+              text-align: center;
+              font-size: 12px;
+          }
+
+          #mce-EMAIL_footer {
+              width: 200px;
+              padding: 14px;
+              color: #111;
+              border-color: #fff;
+              text-align: center;
+              text-transform: capitalize;
+              border: 1px solid #fff;
+          }
+
+          #mc-embedded-subscribe_footer {
+              margin-top: 30px;
+          }
  }
 
 
@@ -448,3 +539,349 @@ footer {
          filter: blur(0px);
      }
  }
+
+ /* Syntax Hightlighter */
+ /* Theme - Autumn */
+ /* For More Themes : https://github.com/richleland/pygments-css */
+
+ .highlight .hll {
+     background-color: #ffffcc
+ }
+
+ .highlight {
+     background: #ffffff;
+ }
+
+ .highlight .c {
+     color: #aaaaaa;
+     font-style: italic
+ }
+
+ /* Comment */
+ .highlight .err {
+     color: #FF0000;
+     background-color: #FFAAAA
+ }
+
+ /* Error */
+ .highlight .k {
+     color: #0000aa
+ }
+
+ /* Keyword */
+ .highlight .ch {
+     color: #aaaaaa;
+     font-style: italic
+ }
+
+ /* Comment.Hashbang */
+ .highlight .cm {
+     color: #aaaaaa;
+     font-style: italic
+ }
+
+ /* Comment.Multiline */
+ .highlight .cp {
+     color: #4c8317
+ }
+
+ /* Comment.Preproc */
+ .highlight .cpf {
+     color: #aaaaaa;
+     font-style: italic
+ }
+
+ /* Comment.PreprocFile */
+ .highlight .c1 {
+     color: #aaaaaa;
+     font-style: italic
+ }
+
+ /* Comment.Single */
+ .highlight .cs {
+     color: #0000aa;
+     font-style: italic
+ }
+
+ /* Comment.Special */
+ .highlight .gd {
+     color: #aa0000
+ }
+
+ /* Generic.Deleted */
+ .highlight .ge {
+     font-style: italic
+ }
+
+ /* Generic.Emph */
+ .highlight .gr {
+     color: #aa0000
+ }
+
+ /* Generic.Error */
+ .highlight .gh {
+     color: #000080;
+     font-weight: bold
+ }
+
+ /* Generic.Heading */
+ .highlight .gi {
+     color: #00aa00
+ }
+
+ /* Generic.Inserted */
+ .highlight .go {
+     color: #888888
+ }
+
+ /* Generic.Output */
+ .highlight .gp {
+     color: #555555
+ }
+
+ /* Generic.Prompt */
+ .highlight .gs {
+     font-weight: bold
+ }
+
+ /* Generic.Strong */
+ .highlight .gu {
+     color: #800080;
+     font-weight: bold
+ }
+
+ /* Generic.Subheading */
+ .highlight .gt {
+     color: #aa0000
+ }
+
+ /* Generic.Traceback */
+ .highlight .kc {
+     color: #0000aa
+ }
+
+ /* Keyword.Constant */
+ .highlight .kd {
+     color: #0000aa
+ }
+
+ /* Keyword.Declaration */
+ .highlight .kn {
+     color: #0000aa
+ }
+
+ /* Keyword.Namespace */
+ .highlight .kp {
+     color: #0000aa
+ }
+
+ /* Keyword.Pseudo */
+ .highlight .kr {
+     color: #0000aa
+ }
+
+ /* Keyword.Reserved */
+ .highlight .kt {
+     color: #00aaaa
+ }
+
+ /* Keyword.Type */
+ .highlight .m {
+     color: #009999
+ }
+
+ /* Literal.Number */
+ .highlight .s {
+     color: #aa5500
+ }
+
+ /* Literal.String */
+ .highlight .na {
+     color: #1e90ff
+ }
+
+ /* Name.Attribute */
+ .highlight .nb {
+     color: #00aaaa
+ }
+
+ /* Name.Builtin */
+ .highlight .nc {
+     color: #00aa00;
+     text-decoration: underline
+ }
+
+ /* Name.Class */
+ .highlight .no {
+     color: #aa0000
+ }
+
+ /* Name.Constant */
+ .highlight .nd {
+     color: #888888
+ }
+
+ /* Name.Decorator */
+ .highlight .ni {
+     color: #880000;
+     font-weight: bold
+ }
+
+ /* Name.Entity */
+ .highlight .nf {
+     color: #00aa00
+ }
+
+ /* Name.Function */
+ .highlight .nn {
+     color: #00aaaa;
+     text-decoration: underline
+ }
+
+ /* Name.Namespace */
+ .highlight .nt {
+     color: #1e90ff;
+     font-weight: bold
+ }
+
+ /* Name.Tag */
+ .highlight .nv {
+     color: #aa0000
+ }
+
+ /* Name.Variable */
+ .highlight .ow {
+     color: #0000aa
+ }
+
+ /* Operator.Word */
+ .highlight .w {
+     color: #bbbbbb
+ }
+
+ /* Text.Whitespace */
+ .highlight .mb {
+     color: #009999
+ }
+
+ /* Literal.Number.Bin */
+ .highlight .mf {
+     color: #009999
+ }
+
+ /* Literal.Number.Float */
+ .highlight .mh {
+     color: #009999
+ }
+
+ /* Literal.Number.Hex */
+ .highlight .mi {
+     color: #009999
+ }
+
+ /* Literal.Number.Integer */
+ .highlight .mo {
+     color: #009999
+ }
+
+ /* Literal.Number.Oct */
+ .highlight .sa {
+     color: #aa5500
+ }
+
+ /* Literal.String.Affix */
+ .highlight .sb {
+     color: #aa5500
+ }
+
+ /* Literal.String.Backtick */
+ .highlight .sc {
+     color: #aa5500
+ }
+
+ /* Literal.String.Char */
+ .highlight .dl {
+     color: #aa5500
+ }
+
+ /* Literal.String.Delimiter */
+ .highlight .sd {
+     color: #aa5500
+ }
+
+ /* Literal.String.Doc */
+ .highlight .s2 {
+     color: #aa5500
+ }
+
+ /* Literal.String.Double */
+ .highlight .se {
+     color: #aa5500
+ }
+
+ /* Literal.String.Escape */
+ .highlight .sh {
+     color: #aa5500
+ }
+
+ /* Literal.String.Heredoc */
+ .highlight .si {
+     color: #aa5500
+ }
+
+ /* Literal.String.Interpol */
+ .highlight .sx {
+     color: #aa5500
+ }
+
+ /* Literal.String.Other */
+ .highlight .sr {
+     color: #009999
+ }
+
+ /* Literal.String.Regex */
+ .highlight .s1 {
+     color: #aa5500
+ }
+
+ /* Literal.String.Single */
+ .highlight .ss {
+     color: #0000aa
+ }
+
+ /* Literal.String.Symbol */
+ .highlight .bp {
+     color: #00aaaa
+ }
+
+ /* Name.Builtin.Pseudo */
+ .highlight .fm {
+     color: #00aa00
+ }
+
+ /* Name.Function.Magic */
+ .highlight .vc {
+     color: #aa0000
+ }
+
+ /* Name.Variable.Class */
+ .highlight .vg {
+     color: #aa0000
+ }
+
+ /* Name.Variable.Global */
+ .highlight .vi {
+     color: #aa0000
+ }
+
+ /* Name.Variable.Instance */
+ .highlight .vm {
+     color: #aa0000
+ }
+
+ /* Name.Variable.Magic */
+ .highlight .il {
+     color: #009999
+ }
+
+ /* Literal.Number.Integer.Long */
