--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-    <div class="row offset-md-1">
+    <div class="row ">
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 offset-md-1">
 
             <div class="card" id="profile-card">
                 <a href="/">
