blog layout changes

--- a/_includes/blog_sidebar.html
+++ b/_includes/blog_sidebar.html
@@ -2,9 +2,9 @@
 <div class="col-lg-4">
     <div class="card">
         <div class="card-header"> About </div>
-        <div class="card-body text-dark">
+        <div class="card-body">
             <!-- Your Bio -->
-            <p> {{ site.author_bio }}</p>
+            <p class="author_bio"> {{ site.author_bio }}</p>
 
             {%- include github_star_button.html -%}
         </div>
