--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,7 +4,7 @@ layout: default
 
     <div class="row">
 
-        <div class="col-lg-8 col-md-4">
+        <div class="col-lg-7 offset-md-1">
 
                 <!-- Blog Posts -->
              <ul >
@@ -64,8 +64,6 @@ layout: default
     </div>
 
 </div>
-
-
             {%- include blog_sidebar.html -%}
         </div>
 
