--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,20 +5,19 @@ layout: default
 <!-- Blog Post Breadcrumbs -->
 {%- include blog_post_breadcrumb.html -%}
 
-<div class="row">
+<div class="row" id="blog-post-container">
 
         <div class="col-lg-8">
-    
+
            {%- include blog_post_article.html -%}
 
            {%- include blog_post_comments.html -%}
         </div>
- 
+
            {%- include blog_sidebar.html -%}
 
 
-        
-</div> <!-- End of row-->
-    
 
-    
+</div> <!-- End of row-->
+
+
