some layout changes

--- a/_includes/blog_post_breadcrumb.html
+++ b/_includes/blog_post_breadcrumb.html
@@ -1,11 +1,10 @@
+<div class="col-lg-12">
 <nav aria-label="breadcrumb" role="navigation">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="{{site.url}}{{site.baseurl}}/blog">Blog</a>
-            </li>
-            <li class="breadcrumb-item">
-                <a href="{{site.url}}{{site.baseurl}}/blog/categories">Categories</a>
+                <a href="{{site.url}}{{site.baseurl}}/blog"><i class="fa fa-home" aria-hidden="true"></i></a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
         </ol>
     </nav>
+</div>
