--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -177,6 +177,10 @@ header {
     .offset-md-1 {
     margin-left: 3.333333% !important;
     }
+    #topNav{
+        padding-left: 100px;
+        padding-right: 100px;
+    }
 }
 
 #profile-card {
