--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
         <div class="row">
 
-                <nav class="navbar navbar-expand-lg fixed-top navbar-dark ">
+                <nav class="navbar navbar-expand-lg fixed-top navbar-dark " id="topNav">
                 <!-- <a class="navbar-brand" href="#">{{site.title}}</a> -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
