--- a/_includes/blog_post_breadcrumb.html
+++ b/_includes/blog_post_breadcrumb.html
@@ -4,7 +4,7 @@
             <li class="breadcrumb-item">
                 <a href="{{site.url}}{{site.baseurl}}/blog"><i class="fa fa-home" aria-hidden="true"></i></a>
             </li>
-            <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
+            <li class="breadcrumb-item active" aria-current="page"><a href="{{page.url}}">{{ page.title }}</a></li>
         </ol>
     </nav>
 </div>
