--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@ layout: compress
 
         <div class="col-lg-12">
             {{ content }}
-
+        </div>
          <div class="row" id="newsletter_footer">
                {%- include blog_newsletter.html -%}
          </div>
