--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,26 +4,18 @@ layout: compress
 
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
-
 {%- include head.html -%}
-
 <body>
-
-
     <div class="container-fluid">
-
         {%- include header.html -%}
-
-
         <div class="col-lg-12">
             {{ content }}
         </div>
-         <div class="row" id="newsletter_footer">
+         <div class="col-lg-12" id="newsletter_footer">
                {%- include blog_newsletter.html -%}
          </div>
         </div>
         {%- include footer.html -%}
-
     </div>
      <script>
             var options = {
