--- a/_includes/gallery-layout.html
+++ b/_includes/gallery-layout.html
@@ -1,6 +1,5 @@
  <!-- Single Gallery -->
- <div class="row">
-  <div class="col-lg-10 offset-md-2">
+  <div class="col-lg-12">
     <div id="imageGallery{% if include.id_number %}-{{ include.id_number }}{% endif %}">
       <div id="gallery-sizer{% if include.id_number %}-{{ include.id_number }}{% endif %}"></div>
       {% for picture in include.gallery.pictures %}
@@ -12,7 +11,6 @@
       {% endfor %}
       </div>
   </div>
-</div>
 <script type="text/javascript">
     $(document).ready(function() {
         $("#imageGallery").lightGallery({
