--- a/_includes/product_definition.html
+++ b/_includes/product_definition.html
@@ -1,5 +1,5 @@
 <button
- class="buy-button snipcart-add-item btn-success"
+ class="buy-button snipcart-add-item btn-lg btn-primary"
  data-item-id="{{ product.identifier }}"
  data-item-name="{{ product.name }}"
  data-item-price="{{ product.price }}"
