--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="row">
   <div class="col-lg-12">
-      <nav class="sticky-top">
+      <nav class="fixed-top" id="snipcart-floating-cart">
           <button class="btn btn-lg btn-dark header__checkout snipcart-checkout">
               <svg width="31" height="27" viewBox="0 0 31 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -18,6 +18,8 @@ layout: default
   </div>
 </div>
 <div class="row">
+      <!-- Blog Post Breadcrumbs -->
+{%- include shop_breadcrumb.html -%}
    <div class="col-lg-8 offset-md-2">
         {% for product in site.products %}
 
