--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,6 +26,7 @@ html[data-theme="dark"] {
     --social-link-color: #ffffff;
     --card-background-color: rgb(32, 32, 34);
     --newsletter-background-color: #222324;
+    --button-background-color: #111;
 }
 
 html,
@@ -45,6 +46,7 @@ html[data-theme="light"] {
     --social-link-color: #262222;
     --card-background-color: rgb(250, 250, 250);
     --newsletter-background-color: #00000008;
+    --button-background-color: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -65,6 +67,7 @@ html[data-theme="light"] {
         --social-link-color: #ffffff;
         --card-background-color: rgb(32, 32, 34);
         --newsletter-background-color: #222324;
+        --button-background-color: #111;
     }
 
     /* Light Mode */
@@ -83,6 +86,7 @@ html[data-theme="light"] {
         --underline-color: hsl(0, 0%, 60%);
         --social-link-color: #262222;
         --card-background-color: rgb(250, 250, 250);
+        --button-background-color: #fff;
     }
 }
 
@@ -245,6 +249,15 @@ header {
 }
 .snipcart__button--icon {
     border: 0px solid #f0f5f6 !important;
+}
+#snipcart-floating-cart{
+    margin-top: 150px;
+}
+.snipcart-cart-button--secondary {
+    color: --var(--bold-color) !important;
+    background-color: var(--button-background-color) !important;
+    padding: 16px;
+    text-transform: none;
 }
 
 /* Gallery */
