homepage layout changes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -80,8 +80,9 @@
   <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch-theme-algolia.min.css">
- <link rel="stylesheet" href="/assets/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/assets/bower_components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/assets/bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css" />
+
   <!-- Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 
@@ -89,15 +90,17 @@
   <link rel="icon" href="{{site.url}}{{site.baseurl}}/assets/img/favicon.ico" type="image/gif" sizes="16x16">
 
   <!-- Jquery -->
-  <script src="/assets/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh" crossorigin="anonymous"></script>
+ <!-- <script src="/assets/bower_components/jquery/dist/jquery.min.js"></script> -->
   <script src="/assets/bower_components/jquery.easing/jquery.easing.min.js"></script>
   <script src="/assets/bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/assets/bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
   <script src="/assets/bower_components/lightgallery/dist/js/lightgallery-all.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.2/picturefill.min.js"></script>
   <script src="/assets/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
-   <script src="/assets/bower_components/nanobar/nanobar.min.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.js"></script>
+  <script src="/assets/bower_components/nanobar/nanobar.min.js"></script>
+  <script src="/assets/bower_components/typewrite/dist/typewrite.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
 
  <!-- Github Button -->
@@ -121,6 +124,8 @@
       fjs.parentNode.insertBefore(js, fjs)
     }(document, "script", "dhm"))
   </script>
+
+
 
   {% if jekyll.environment == "production" %}
 
