--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,9 +1,15 @@
---- 
-layout: default 
+---
+layout: default
 ---
 
-<div class="card">
-    <h1 class="card-title"> Contact</h1>
-   
-     {%- include contact_me_form.html -%}
- </div>
+
+<div class="row">
+    <div class="col-lg-6 offset-md-3">
+        <div class="card">
+                <h1 class="card-title"> Contact Me </h1>
+                 {%- include contact_me_form.html -%}
+             </div>
+    </div>
+</div>
+
+
