changed in home layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,18 +7,8 @@ layout: default
             $('#typewriteText').typewrite({
                 actions: [
                     {type: 'Hello, I’m John Doe, Web-Developer based on San Fransisco.'},
-                    {type: '<br>'},
-                    {type: 'I build creative Websites and Apps '},
-                    {type: '<br>'},
-                    {type: 'Welcome to my blog !'},
-                    {remove: {num: 12, type: 'stepped'}},
                     {select: {from: 11, to: 19}},
-                    {delay: 2000},
-                    {remove: {num: 45, type: 'stepped'}},
-                    {type: 'I build beautiful and responsive Websites and Apps '},
-                    {type: '<br>'},
-                    {delay: 500},
-                    {type: 'Stay updated by subscribing to our Newsletter :D'}
+                    {delay: 2000}
                 ]
             });
         });
