changes in homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
 <div class="col-lg-8 offset-md-2">
   <div class="jumbotron" style="text-align: center;">
     <h1 class="display-4">Hello, world!</h1>
-    <h3> devlopr is a jekyll theme built for developers like you !</h3>
+    <h3> {{site.description}}</h3>
     <p class="lead" id="typewriteText"></p>
     <button class="btn btn-dark btn-lg"><a href="/get-started">Get Started </a></button>
   </div>
