--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
         $(document).ready(function(){
             $('#typewriteText').typewrite({
                 actions: [
-                    {type: 'Hello, I’m John Doe, Web-Developer based on San Fransisco.'}
+                    {type: 'Hello, I’m {{site.author}}, {{site.author_bio}}.'}
                 ]
             });
         });
@@ -15,9 +15,9 @@ layout: default
 
 <div class="col-lg-8 offset-md-2">
   <div class="jumbotron" style="text-align: center;">
-    <h1 class="display-4">Hello, world!</h1>
-    <h3> {{site.description}}</h3>
+    <h1 class="display-4">Hello, {{site.author}} !</h1>
+    <h3> {{site.author_bio}} . You can edit this in _config.yml file</h3>
     <p class="lead" id="typewriteText"></p>
-    <button class="btn btn-dark btn-lg"><a href="/get-started">Get Started </a></button>
+    <button class="btn btn-dark btn-lg"><a href="/about"> About Me </a></button>
   </div>
 </div>
