--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -36,5 +36,13 @@
     <br />
     {{ content }}
   </div>
-  <div id="disqus_thread"></div>
+
+  {%- if site.hyvor_talk_website_id -%}
+  <div class="comments">
+    {%- include hyvor_comments.html -%}
+   </div>
+    {%- endif -%}
+  <!-- Incomment incase you want to use Disqus
+      <div id="disqus_thread"></div>
+   -->
 </article>
