changes in widget

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -125,7 +125,7 @@
       }(document, "script", "dhm"))
     </script>
       <!-- buy me a coffeee -->
-  <script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="sujaykundu" data-description="Get access to exclusive content !" data-message="Hey ! Thanks for visiting, show some love by buying me a Coffee" data-color="#FF813F" data-position="right" data-x_margin="18" data-y_margin="25"></script>
+    <script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="sujaykundu" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FF813F" data-position="right" data-x_margin="10" data-y_margin="10"></script>
 
     {% if jekyll.environment == "production" %}
 
