--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -600,7 +600,8 @@ header {
         width: 400px;
         padding: 14px;
         color: #111;
-        border-color: #fff;
+        border-color: #111;
+        background: bisque;
         text-align: center;
         text-transform: capitalize;
         border: 1px solid #fff;
