--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -1,6 +1,6 @@
 <article class="card" itemscope itemtype="http://schema.org/BlogPosting">
   <div class="card-header">
-    <!-- <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1> -->
+    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <h4 class="post-meta">{{ page.summary }}</h4>
     <p class="post-summary">
       Posted by : {% if page.author %}
