--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -392,6 +392,26 @@ header {
     float:left;
 }
 
+/* Share page buttons */
+.share-page {
+    text-align: center;
+    background: var(--button-background-color);
+    color: #111;
+    padding: 8px 15px;
+    border-radius: 5px;
+    margin: 1.5 * 1 * 0;
+
+    a {
+        font-weight: 700;
+        color: #fff;
+        margin-left: 10px;
+
+        &:hover {
+            border-bottom: 1px dashed #fff;
+        }
+    }
+}
+
 /* floating btn for buy me coffee */
 #bmc-wbtn{
     bottom: 40px !important;
